fix: swagger files and tags
