# docs/swagger.yaml
@@ -48,7 +48,7 @@ definitions:
         type: integer
     type: object
   models.UserDto:
-    description: UserDto model
+    description: Worker model
     properties:
       full_name:
         type: string
@@ -85,7 +85,7 @@ paths:
             $ref: '#/definitions/handler.errorResponse'
       summary: Get list of staff
       tags:
-      - UserDto
+      - Worker
   /management/{id}:
     get:
       consumes:
@@ -112,7 +112,7 @@ paths:
             $ref: '#/definitions/handler.errorResponse'
       summary: Get worker's tasks by ID
       tags:
-      - UserDto
+      - Worker
   /management/{worker_id}/task/{task_id}:
     post:
       consumes:
@@ -146,7 +146,7 @@ paths:
             $ref: '#/definitions/handler.errorResponse'
       summary: Assign a task to a worker
       tags:
-      - UserDto
+      - Worker
   /task:
     get:
       consumes:
@@ -167,7 +167,7 @@ paths:
             $ref: '#/definitions/handler.errorResponse'
       summary: Get list of tasks
       tags:
-      - task
+      - Task
     post:
       consumes:
       - application/json
@@ -196,7 +196,7 @@ paths:
             $ref: '#/definitions/handler.errorResponse'
       summary: Create a new task
       tags:
-      - task
+      - Task
   /task/{id}:
     delete:
       consumes:
@@ -225,7 +225,7 @@ paths:
             $ref: '#/definitions/handler.errorResponse'
       summary: Delete task
       tags:
-      - task
+      - Task
     get:
       consumes:
       - application/json
@@ -253,7 +253,7 @@ paths:
             $ref: '#/definitions/handler.errorResponse'
       summary: Get task by ID
       tags:
-      - task
+      - Task
     put:
       consumes:
       - application/json
@@ -287,7 +287,7 @@ paths:
             $ref: '#/definitions/handler.errorResponse'
       summary: Update task
       tags:
-      - task
+      - Task
   /task/status:
     get:
       consumes:
@@ -308,7 +308,7 @@ paths:
             $ref: '#/definitions/handler.errorResponse'
       summary: Get list of statuses
       tags:
-      - status
+      - Status
   /task/status/{name}:
     get:
       consumes:
@@ -335,7 +335,7 @@ paths:
             $ref: '#/definitions/handler.errorResponse'
       summary: Get tasks by status
       tags:
-      - task
+      - Task
 securityDefinitions:
   ApiKeyAuth:
     in: header
